# creatorapp

./: .replit  design_guidelines.json  package.json  pyproject.toml
.agents/memory/: MEMORY.md  add-application-sig.md  api-proxy.md  auth-flow.md  backend-stack.md  brand-logo-validity.md  categories-system.md  data-shape-mapping.md  (+6 more)
.emergent/: emergent.yml
attached_assets/: Pasted-Add-a-new-feature-that-allows-creators-to-connect-their_1781334888503.txt  Pasted-Create-a-centralized-Category-Management-system-and-use_1780772029754.txt  Pasted-Create-a-centralized-Category-Management-system-and-use_1780772363782.txt  Pasted-Create-a-complete-Admin-Dashboard-Admin-Management-Syst_1781378844595.txt  Pasted-Fix-the-application-persistence-and-applicant-visibilit_1780737794509.txt  Pasted-Implement-the-following-UX-UI-and-functionality-fixes-C_1781006740993.txt  Pasted-Implement-the-following-critical-fixes-Creator-Discover_1780984851504.txt  Pasted-Implement-the-following-fixes-and-improvements-Creator-_1780683369276.txt  Pasted-Perform-a-complete-platform-audit-and-fix-all-bugs-brok_1780658930298.txt  Pasted-Project-Rytspot-Platform-Updates-1-Audience-Insights-Up_1780929652494.txt  Pasted-Project-Rytspot-Platform-Updates-1-Audience-Insights-Up_1780929751425.txt  Pasted-Redesign-and-polish-all-Brand-Flow-screens-to-productio_1780741372117.txt  brand_profiles_1780771303054.csv
backend/: admin_routes.py  auth.py  bootstrap_admin.py  database.py  requirements.txt  server.py
frontend/: craco.config.js  index.html  package-lock.json  package.json  vite.config.js
(+61 files in other folders)
