[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Rytspot backend"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "asyncpg>=0.31.0",
    "bcrypt>=3.2.2",
    "fastapi>=0.115.0",
    "passlib>=1.7.4",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.9",
    "starlette>=0.41.0",
    "uvicorn>=0.30.0",
]

[tool.uv]
package = false
